# show-file-in-rust

./: .gitignore  README.md  index.html  package.json  vite.config.ts
src/: App.module.css  App.tsx  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  commands.rs  main.rs
src/components/: AnalysisPanel.module.css  AnalysisPanel.tsx  EvidenceBoard.module.css  EvidenceBoard.tsx  FileCard.module.css  FileCard.tsx  FolderPicker.module.css  FolderPicker.tsx
src/types/: analysis.ts
